favicon and readmen and template configs updated

--- a/public/env.js.example
+++ b/public/env.js.example
@@ -1,5 +1,5 @@
-var GSP_APP_URL="http://gsplocalv2";
-var GSP_APP_RELATIVE_URL="/";
+var GSP_APP_URL="https://gsplocalv2";
+var GSP_APP_RELATIVE_URL="";
 // if in a folder on a domain: '<foldername>/app', etc.
 var GSP_SYSTEM_JS_PACKAGE_MAP = {
   'app':                        GSP_APP_RELATIVE_URL +'/app', // 'dist',
